collapse catch blocks; don't extend from Object